fix: parágrafo modificado

--- a/artigo_series_temporais/article/main.tex
+++ b/artigo_series_temporais/article/main.tex
@@ -9,7 +9,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 
-\title{Séries Temporais: Um Estudo Sobre A Predição de Medidores de Desenvolvimento Brasileiros}
+\title{Séries Temporais: Um Estudo Sobre A Predição de Medidores Populacionais Brasileiros.}
 \author{Lucas Santiago de Oliveira\inst{1}, Rafael Amauri Diniz Augusto\inst{1}, Thiago Henriques Nogueira\inst{1}}
 
 \address{Instituto de Informática -- Pontifícia Universidade Católica de Minas Gerais
