--- a/artigo_series_temporais/article/sections/introducao.tex
+++ b/artigo_series_temporais/article/sections/introducao.tex
@@ -15,23 +15,23 @@ de um ano, observações de hora em hora acerca de um processo químico, e
 diversos outros. Exemplos de usos de séries temporais também podem ser encontrados 
 em setores como finanças, geografia, engenharia, ciências naturais e ciências sociais \cite{WEIGEND:2}.
 
-Tendo isto em vista, é natural que séries temporais se tornem cada vez mais presentes
+Tendo isto em vista, é natural que séries temporais se tornem cada vez mais presentes 
 no contexto de análise de dados a fim de diversificar o número de técnicas utilizadas 
 e prover alternativas mais adequadas a cada cenário. O presente trabalho visa explorar 
-esse processo ao expor cenários onde séries temporais podem representar fenômenos e 
-formas de interpretação de dados.
+essa aplicação de séries temporais no contexto da predição do crescimento populacional 
+brasileiro.
 
-A análise de séries temporais é uma categoria de técnicas capazes de produzir um 
-modelo que leva em consideração dados passados da série para fazer uma predição do 
-valor de um dado desconhecido. Estas técnicas são úteis à medida que estimar 
-valores relevantes em determinados contextos pode se provar imperativo para 
-tomadas de decisões bem-sucedidas, com essas previsões podendo ser aplicadas 
-nos mais diferentes contextos e cenários, como explicitado anteriormente. 
-Adicionalmente, como os modelos prevêem novos valores utilizando como base 
-valores passados, é importante que haja coerência na ordem de observação a fim de 
-possibilitar que o modelo note a presença de características e padrões na série. 
-Esta característica pode ser aproveitada para mapear e mensurar diferentes 
-métricas que estão ordenadas ao longo de um período de tempo. Com isto em mente, 
-o presente artigo tem como objetivo utilizar a análise de séries temporais para 
-avaliar a evolução de diferentes medidores populacionais brasileiros de 1960 a 2020.
+A análise de séries temporais é uma categoria de técnicas capazes de produzir um modelo 
+que leva em consideração dados passados da série para fazer uma predição do valor de 
+um dado desconhecido. Estas técnicas são úteis à medida que estimar valores relevantes 
+em determinados contextos pode se provar imperativo para tomadas de decisões bem-sucedidas, 
+com essas previsões podendo ser aplicadas nos mais diferentes contextos e cenários, como 
+explicitado anteriormente. Adicionalmente, como os modelos prevêem novos valores utilizando 
+como base valores passados, é importante que haja coerência na ordem de observação a fim 
+de possibilitar que o modelo note a presença de características e padrões na série. 
+Esta característica pode ser aproveitada para mapear e mensurar diferentes métricas 
+que estão ordenadas ao longo de um período de tempo. Com isto em mente, o presente 
+artigo tem como objetivo utilizar a análise de séries temporais para avaliar a evolução 
+de diferentes medidores populacionais brasileiros de 1960 a 2020, levando em conta dados 
+históricos.
 
